# titulacion_vehice_speed_estimation

./: CalibCfgPrep.py  PlotExtractorIoU.py  detectionCapture.py  videoEstimatorNoYOLO.py
bash_scripts/: executeCalibrations.sh
manual_calib/data/: cfg.json  cfg_backup.json
manual_calib/data/EDA/: calibration11.txt  calibration12.txt
manual_calib/src/: CMakeLists.txt  CamCal.cpp  build.sh  utils.h
results/bbox_distances/iou/: bbox_distances1  bbox_distances11  bbox_distances12  bbox_distances13  bbox_distances14  bbox_distances2  bbox_distances6  bbox_distances7  bbox_distances9
results/plots_tables/euclidean/: lineSpeeds.txt  samples.txt  speeds.txt
results/plots_tables/iou/: lineSpeeds.txt  samples.txt  speeds.txt
results/spot_velocities/iou/: spot_velocities1  spot_velocities11  spot_velocities12  spot_velocities13  spot_velocities14  spot_velocities2  spot_velocities6  spot_velocities7  spot_velocities9
results/velocities/iou/: velocities1  velocities11  velocities12  velocities13  velocities14  velocities2  velocities6  velocities7  velocities9
workflowUtils/: imgFeatureUtils.py  objectDetection.py
